--- a/css/styles.css
+++ b/css/styles.css
@@ -208,3 +208,101 @@ nav{
 .plan .plan-btn:hover{
     background-color: #5B6644;
 }
+
+.searchdomain-container{
+    background-color: #2D3C2A;
+    text-align: center;
+    padding: 5rem 0;
+}
+
+.searchdomain-container h2{
+    color: #fdfdfd;
+    font-size: 42px;
+    margin-bottom: 15px;
+}
+
+.searchdomain-container p{
+    color: #e9e7e7;
+    font-size: 24px;
+    margin-bottom: 25px;
+}
+
+.searchdomain-container input{
+    display: block;
+    border: none;
+    border-radius: 5px;
+    margin: 0 auto;
+}
+
+.searchdomain-container input[type="text"]{
+    width: 60%;
+    padding: 20px;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+.searchdomain-container input[type="submit"]{
+    background-color: #6A8F41;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fdfdfd;
+    font-weight: bold;
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.searchdomain-container input[type="submit"]:hover {
+    opacity: 1;
+}
+
+.contact-container{
+    text-align: center;
+    padding: 5rem 0 2rem 0;
+}
+.contact-container h2{
+    font-size: 36px;
+    margin-bottom: 15px;
+}
+.contact-container p{
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+.contact-container input,
+.contact-container textarea{
+    width: 200px;
+    margin: 0 10px 20px;
+    padding: 10px 20px;
+    font-size: 26px;
+    border-radius: 5px;
+    border: 1px solid #333;
+    margin: 0 10px 20px;
+}
+
+.contact-container textarea{
+    display: block;
+    margin: 0 auto 20px;
+    width: 470px;
+    height: 150px;
+}
+
+.contact-container input[type="submit"]{
+    display: block;
+    margin: 0 auto;
+    padding: 20px 0;
+    background-color: #6A8F41;
+    color: #fdfdfd;
+    cursor: pointer;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+footer{
+    text-align: center;
+    font-weight: bold;
+    margin: 50px 0 100px;
+    
+}
+
+/* Responsividade */
+
